--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Steph's birthday 🎉</h1>
+            <h1>Today is Steph Philpott's birthday 🎉</h1>
             <img id="bff-img" src="images/steph.jpg">
             <h2 id="bday-age">23 years old</h2>
             <h4 id="bday-date">03.12.2022</h4>
